--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
 <app-nav></app-nav>
+<button (click)="dowloadPdf()">Descargar pdf</button>
+<p>
+    <button (click)="createUser()">crear usuario</button>
+    <button (click)="login()">Acceder</button>
+    <button (click)="getProfile()">Perfil</button>
+</p>
 <app-products></app-products>
 <!-- <p><input type="text" [(ngModel)]="imgParent" /></p>
 <button (click)="toggleImg()">Toggle Img</button>
