--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,7 +1,30 @@
+<button (click)="cretateNewProduct()">create</button>
 <div class="products--grid">
   <app-product
     [product]="product"
     *ngFor="let product of products"
     (addedProduct)="onAddToShoppingCart($event)"
+    (showProduct)="onShowDetail($event)"
   ></app-product>
+</div>
+
+<button (click)="loadMore()">></button>
+
+<div class="product-detail" [class.active]="showProductDetail">
+  <div *ngIf="productChosen">
+    <button (click)="toggleProductDetail()">close</button>
+    <h1>{{ productChosen.title }}</h1>
+    <swiper
+    [slidesPerView]="1"
+  >
+    <ng-template swiperSlide *ngFor="let img of productChosen.images">
+      <img [src]="img" alt="" width="100">
+    </ng-template>
+  </swiper>
+  <p>
+    {{productChosen.description}}
+  </p>
+  <button (click)="updateProduct()">editar</button>
+  <button (click)="deleteProduct()">delete</button>
+  </div>
 </div>
